# CubeGameArchive

./: CMakeLists.txt  README.md  README_TEMPLATE.md
.github/workflows/: linux.yml  macos.yml  windows.yml
include/CubeGame/: DotProduct.hpp
src/: CMakeLists.txt  app.cpp  main.cpp
src/CubeGame/: CMakeLists.txt  DotProduct.cpp
tests/: CMakeLists.txt
tests/CubeGame/: CMakeLists.txt  DotProduct.test.cpp
tests/CubeGame-bin/: CMakeLists.txt
